--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=7807764002:AAGwGZmzbz-kroPyWf9kp2C0JmRdjob-Fpc
 ADMIN_IDS=123456789,987654321
-DB_PATH=fanpay_bot.db
+DB_PATH=/home/FURISSHOP/fanpay_bot.db
